--- a/public/app.css
+++ b/public/app.css
@@ -66,6 +66,7 @@ body {
 
 .header .box {
   display: block;
+  border: 1px solid white;
   flex-grow: 0;
   width: 195.5px;
   border-radius: 5px;
@@ -426,6 +427,14 @@ sup {
 .panel-default>.panel-heading {
 /*  font-family: "europa", "Helvetica", "Arial", sans-serif;*/
   font-weight: 600;
+}
+
+.source-info-box {
+  color: #000000;
+  background-color: #EFEFEF;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 12px;
 }
 
 .entry-info .panel {
