--- a/public/index.pug
+++ b/public/index.pug
@@ -33,13 +33,13 @@ html(lang="en")
 
   header.site-header
     div.icon
-      a(href="https://ceserani.github.io/gt-book/home")
+      a(href="https://aworldmadebytravel.supdigital.org/home")
         img(src='six-boxes.png')
     div
-      a.site-title(href='https://ceserani.github.io/gt-book/') A World Made by Travel
+      a.site-title(href='https://aworldmadebytravel.supdigital.org/') A World Made by Travel
       span.site-author Giovanna Ceserani
     nav
-      a(href='https://ceserani.github.io/gt-book/home') Table of Contents
+      a(href='https://aworldmadebytravel.supdigital.org/home') Table of Contents
       a(href="#/").selected The Grand Tour Explorer
     
   div.main.site
@@ -49,18 +49,18 @@ html(lang="en")
           img(src='sidebar-right.png')
         .site-nav
           .session.toc(style='display: flex; justify-content: space-between; padding: 10px;')
-            a(href='https://ceserani.github.io/gt-book/home')
+            a(href='https://aworldmadebytravel.supdigital.org/home')
               b Table of Contents
             input#openSidebarMenu.openSidebarMenu(type='checkbox')
             label.sidebarIconToggle.sidebarIconToggleLeft(for='openSidebarMenu')
               img(src='sidebar-left.png')
           .session.active.hide
             // Preface and Acknowledgements, Epilogue
-            a.session-title(href='https://ceserani.github.io/gt-book/') Home
+            a.session-title(href='https://aworldmadebytravel.supdigital.org/') Home
             // 
           .session
             // Preface and Acknowledgements, Epilogue
-            a.session-title(href='https://ceserani.github.io/gt-book/entering-a-world-made-by-travel') I.&#x9;Entering a World Made by Travel: Introducing the Explorer
+            a.session-title(href='https://aworldmadebytravel.supdigital.org/entering-a-world-made-by-travel') I.&#x9;Entering a World Made by Travel: Introducing the Explorer
             // 
           .session.gte.active
             // Preface and Acknowledgements, Epilogue
@@ -75,31 +75,31 @@ html(lang="en")
               .chapter(ui-sref-active="active")
                 a(ui-sref="map") Map
               .chapter(ui-sref-active="active")
-                a(href="https://ceserani.github.io/gt-book/the-grand-tour-explorer/glossary") Glossary
+                a(href="https://aworldmadebytravel.supdigital.org/the-grand-tour-explorer/glossary") Glossary
               .chapter(ui-sref-active="active")
-                a(download,href="https://ceserani.github.io/gt-book/the-grand-tour-explorer/data") Data
+                a(download,href="https://aworldmadebytravel.supdigital.org/the-grand-tour-explorer/data") Data
           .session
-            a.session-title(href='https://ceserani.github.io/gt-book/scholars-essays/ceserani-introduction') III. Seven Scholars&rsquo; Essays: Using the Explorer
+            a.session-title(href='https://aworldmadebytravel.supdigital.org/scholars-essays/ceserani-introduction') III. Seven Scholars&rsquo; Essays: Using the Explorer
 
             // 
           .session
             // Preface and Acknowledgements, Epilogue
-            a.session-title(href='https://ceserani.github.io/gt-book/presenting-the-data') IV. Presenting the Data: Categories and Schemas
+            a.session-title(href='https://aworldmadebytravel.supdigital.org/presenting-the-data') IV. Presenting the Data: Categories and Schemas
             // 
           .session
             // Preface and Acknowledgements, Epilogue
-            a.session-title(href='https://ceserani.github.io/gt-book/archive-to-explorer') V.&#x9;Archive to Explorer: A Project History
+            a.session-title(href='https://aworldmadebytravel.supdigital.org/archive-to-explorer') V.&#x9;Archive to Explorer: A Project History
             // 
           .session
-            a.session-title(href='https://ceserani.github.io/gt-book/in-the-classroom/introduction') VI.&#x9;The Explorer in the Classroom: a Teaching Companion
+            a.session-title(href='https://aworldmadebytravel.supdigital.org/in-the-classroom/introduction') VI.&#x9;The Explorer in the Classroom: a Teaching Companion
 
           .session
             // Preface and Acknowledgements, Epilogue
-            a.session-title(href='https://ceserani.github.io/gt-book/bibliography') Bibliography
+            a.session-title(href='https://aworldmadebytravel.supdigital.org/bibliography') Bibliography
             // 
           .session
             // Preface and Acknowledgements, Epilogue
-            a.session-title(href='https://ceserani.github.io/gt-book/acknowledgements-and-credits') Acknowledgements and Credits
+            a.session-title(href='https://aworldmadebytravel.supdigital.org/acknowledgements-and-credits') Acknowledgements and Credits
             // 
         article.post.container-fluid
           nav.navbar.navbar-default(ng-show="currentUser && currentUser.role!='viewer'")
