--- a/public/index.pug
+++ b/public/index.pug
@@ -64,7 +64,7 @@ html(lang="en")
             // 
           .session.gte.active
             // Preface and Acknowledgements, Epilogue
-            a.session-title(href='') II.&#x9;The Grand Tour Explorer: Travelers&rsquo; Lives and Journeys
+            a.session-title(href='/explorer/') II.&#x9;The Grand Tour Explorer: Travelers&rsquo; Lives and Journeys
             #4.chapters
               .chapter(ui-sref-active="active")
                 a(ui-sref="explore") Explore
@@ -155,4 +155,4 @@ html(lang="en")
     div
       | Published by 
       a(href="https://sup.org") STANFORD UNIVERSITY PRESS
-      img(src='logo-stanford-1.png')
+      img(src='logo-stanford-1.svg')
