--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -347,7 +347,7 @@
           br
           br
           span Click here to search the archive catalog:
-            a(href="https://aworldmadebytravel.supdigital.org/home")
+            a(href="https://aworldmadebytravel.supdigital.org/")
               img(src=require('../paul_mellon.png') height="20")
 
 
