--- a/public/components/entry-list/entry-list-context-bar.pug
+++ b/public/components/entry-list/entry-list-context-bar.pug
@@ -24,7 +24,7 @@
                 ) Browse all entries
     
     .prev-next-buttons
-        a(ng-href="{{ '#/entries/' + previous + (editing ? '/edit' : '') }}")
+        a(ng-href="{{ '/explorer/#/entries/' + previous + (editing ? '/edit' : '') }}")
             i.fa.fa-angle-left 
-        a(ng-href="{{ '#/entries/' + next + (editing ? '/edit' : '') }}")
+        a(ng-href="{{ '/explorer/#/entries/' + next + (editing ? '/edit' : '') }}")
             i.fa.fa-angle-right.margin-left
