--- a/public/edit-entry/edit-entry.pug
+++ b/public/edit-entry/edit-entry.pug
@@ -24,7 +24,7 @@
                     
                     a.btn.btn-default(
                         type="button",
-                        ng-href="#/entries/{{ entry.index }}",
+                        ng-href="/explorer/#/entries/{{ entry.index }}",
                     ) Done Editing
 
                     button.btn.btn-warning(
