--- a/public/components/entry-list/entry-list.pug
+++ b/public/components/entry-list/entry-list.pug
@@ -99,7 +99,7 @@
           td.entry-checkbox
             input(type="checkbox", ng-model="entry.selected")
           td.entry-list-item
-            a(ng-href="#/entries/{{entry.index}}")
+            a(ng-href="/explorer/#/entries/{{entry.index}}")
               span.add-to-list-label.label.label-success(ng-show="entry.addedToList") Added to list
               span.add-to-list-label.label.label-info(ng-show="entry.alreadyInList") Already in list
               h4 {{ entry.fullName }}
