--- a/public/explore/explore.pug
+++ b/public/explore/explore.pug
@@ -13,10 +13,9 @@
         .col-lg-2
           label Filters
           ul.list-unstyled
-            li.border-top(ng-repeat="dimension in dimensions",style="position:relative")
-              span.small.text-light.pull-right.explore-count(title="{{ counts[dimension.field] }} entries have a value for this filter.") {{ counts[dimension.field] }}
+            li.border-top(ng-repeat="dimension in dimensions",style="position:relative; display: flex;")
 
-              .checkbox(style="")
+              .checkbox(style="flex: 1")
                 label
                   input(type="checkbox", ng-model="dimension.active")
                   div(ng-class="{ 'text-strong' : query.hasOwnProperty(dimension.field) }")
@@ -24,7 +23,8 @@
                       span(ng-if="dimension.label === 'DBITI Employments & Identifiers'", style="font-style: italic") DBITI 
                       span(ng-if="dimension.label === 'DBITI Employments & Identifiers'", style="font-style: normal") Employments & Identifiers
                   span.small(ng-show="dimension.subgroup") {{dimension.subgroup}}
-                  
+              span.small.text-light.pull-right.explore-count(title="{{ counts[dimension.field] }} entries have a value for this filter.") {{ counts[dimension.field] }}
+
         .col-lg-10
           .clearfix.margin-bottom
             a.btn-xs.btn.btn-danger.pull-right(ng-click="clear()") Clear all
@@ -33,7 +33,7 @@
           form
             .row
               .col-lg-3(ng-repeat='dimension in activeDimensions')
-                div(ng-mouseover="tooltip = dimension.field", style="float: right; position: relative; right: 7px; cursor: pointer;")
+                div(ng-mouseover="tooltip = dimension.field", style="float: right; position: absolute; right: 7px; cursor: pointer;")
                     span(ng-mouseover="tooltip = dimension.field", ng-mouseleave="(tooltip == dimension.field) && (tooltip = null)", style="color: #23597B; font-weight: bold") ?
                     div.mentioned-names-popup(
                           ng-mouseleave="(tooltip == dimension.field) && (tooltip = null)"
