--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -336,19 +336,19 @@
           ng-bind-html="entry[fieldKey + '_formatted']",
         )
 
-      div.col-lg-6(ng-if="entry.origin && entry.origin.entryOrigin === 'Extracted from narrative'")
-        div.entry-stub Why is this entry blank? This is one of the entries we created for travelers who only existed in others’ entries, with no narrative of their own, of whom a great majority are women. 
-          a Read more about how we found these hidden figures and what we know about them…
+        div(ng-if="entry.origin && entry.origin.entryOrigin === 'Extracted from narrative'")
+          div.entry-stub Why is this entry blank? This is one of the entries we created for travelers who only existed in others’ entries, with no narrative of their own, of whom a great majority are women. 
+            a Read more about how we found these hidden figures and what we know about them…
 
-      div.col-lg-6(ng-if="entry.origin && (entry.origin.entryOrigin === 'Extracted from heading' || entry.origin.entryOrigin === 'From the Dictionary')")
-        div.source-info-box 
-          span This entry, which was published in the Dictionary, was compiled from material in the Brinsley Ford Archive at the Paul
-            Mellon Centre for Studies in British Art in London.  
-          br
-          br
-          span Click here to search the archive catalog:
-            a(href="https://aworldmadebytravel.supdigital.org/")
-              img(src=require('../paul_mellon.png') height="20")
+        div(ng-if="entry.origin && (entry.origin.entryOrigin === 'Extracted from heading' || entry.origin.entryOrigin === 'From the Dictionary')")
+          div.source-info-box 
+            span This entry, which was published in the Dictionary, was compiled from material in the Brinsley Ford Archive at the Paul
+              Mellon Centre for Studies in British Art in London.  
+            br
+            br
+            span Click here to search the archive catalog:
+              a(href="https://aworldmadebytravel.supdigital.org/")
+                img(src=require('../paul_mellon.png') height="20")
 
 
 
