--- a/public/index.pug
+++ b/public/index.pug
@@ -36,7 +36,7 @@ html(lang="en")
       a(href="https://aworldmadebytravel.supdigital.org/")
         img(src='six-boxes.png')
     div
-      a.site-title(href='https://aworldmadebytravel.supdigital.org/') A World Made by Travel
+      a.site-title(href='https://aworldmadebytravel.org/') A World Made by Travel
       span.site-author Giovanna Ceserani
     nav
       a(href='https://aworldmadebytravel.supdigital.org/') Table of Contents
