Update ISBN, link to higher quality sidebar icons

--- a/public/index.pug
+++ b/public/index.pug
@@ -13,7 +13,7 @@ html(lang="en")
 
     meta(name='description' content='Ceserani, Giovanna. A World Made by Travel: The Digital Grand Tour. Redwood City: Stanford University Press, 2024. http://doi.org/10.21627/2024wmt.')
     meta(name='citation_title' content='A World Made by Travel: The Digital Grand Tour')
-    meta(name='citation_isbn' content='9781503629165 ')
+    meta(name='citation_isbn' content='9781503636514 ')
     meta(name='citation_author' content='Ceserani, Giovanna')
     meta(name='citation_publication_date' content='2024')
     meta(name='citation_language' content='en')
@@ -57,14 +57,14 @@ html(lang="en")
     div.page-content
       div.wrapper
         label.sidebarIconToggle.sidebarIconToggleRight(for='openSidebarMenu')
-          img(src='sidebar-right.png')
+          img(src='arrow-bar-right.svg')
         .site-nav
           .session.toc(style='display: flex; justify-content: space-between; padding: 10px;')
             a(href='https://aworldmadebytravel.supdigital.org/')
               b Table of Contents
             input#openSidebarMenu.openSidebarMenu(type='checkbox')
             label.sidebarIconToggle.sidebarIconToggleLeft(for='openSidebarMenu')
-              img(src='sidebar-left.png')
+              img(src='arrow-bar-left.svg')
           .session.active.hide
             // Preface and Acknowledgements, Epilogue
             a.session-title(href='https://aworldmadebytravel.supdigital.org/') Home
@@ -157,7 +157,7 @@ html(lang="en")
       br
     div
       | ISBN 
-      b 9781503629165
+      b 9781503636514
       |  | OCLC 
       b
         a(href="https://www.worldcat.org/oclc/1412258452") 1412258452
