Fix capitalization in one sidebar title

--- a/public/index.pug
+++ b/public/index.pug
@@ -102,7 +102,7 @@ html(lang="en")
             a.session-title(href='https://aworldmadebytravel.supdigital.org/archive-to-explorer') V.&#x9;Archive to Explorer: A Project History
             // 
           .session
-            a.session-title(href='https://aworldmadebytravel.supdigital.org/in-the-classroom/introduction') VI.&#x9;The Explorer in the Classroom: a Teaching Companion
+            a.session-title(href='https://aworldmadebytravel.supdigital.org/in-the-classroom/introduction') VI.&#x9;The Explorer in the Classroom: A Teaching Companion
 
           .session
             // Preface and Acknowledgements, Epilogue
